--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "'art vandelay'.title()"
    ]
   },
   {
@@ -262,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
